--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
+asgiref==3.2.7
 defusedxml==0.6.0
 diff-match-patch==20181111
 dj-database-url==0.5.0
 Django==2.2
 django-filter==2.2.0
 django-heroku==0.3.1
-django-import-export==2.0.1
+django-import-export==2.1.0
 djangorestframework==3.11.0
 et-xmlfile==1.0.1
 gunicorn==20.0.4
+importlib-metadata==1.6.0
 jdcal==1.4.1
-Markdown==3.2.1
+Markdown==3.2.2
 MarkupPy==1.14
 odfpy==1.4.1
 openpyxl==3.0.3
-psycopg2==2.8.4
-pytz==2019.3
-PyYAML==5.3
-sqlparse==0.3.0
-tablib==0.14.0
-whitenoise==5.0.1
+psycopg2==2.8.5
+pytz==2020.1
+PyYAML==5.3.1
+sqlparse==0.3.1
+tablib==2.0.0
+whitenoise==5.1.0
 xlrd==1.2.0
 xlwt==1.3.0
+zipp==3.1.0
